--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -9,7 +9,7 @@
 
   /* change the values below to your chosen font(s) */
   --heading-font: "M+PLUS+Rounded+1c";
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --paragraph-font: "Comfortaa", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000000;  /* headlines on a white background */ 
