--- a/styles/style.css
+++ b/styles/style.css
@@ -121,4 +121,49 @@ footer {
 
 @media screen and (max-width: 1300px) {
   footer {display: grid;}
+
+  header nav {
+    display: grid;
+    grid-template-columns: 150px 1fr 1fr;
+    grid-template-rows: 150px 150px;
+    text-align: center;
+    justify-items: end;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 30px;
+    font-family: "M PLUS Rounded 1c";
+    background-color:  #fef9f0;
+    padding: 11px 0px;
+  }
+  #Logolink {
+    width: 100%;
+    grid-column-start: 1;
+    grid-row: 1/3;
+  }
+  #aboutMeP {
+    display: inline;
+    grid-column-start: 2;
+    grid-row: 1/2;
+  } 
+  #resumeP  {
+    display: inline;
+    position: relative;
+    right: 100px;
+    grid-column-start: 3;
+    grid-row: 1/2;
+  } 
+  #galoryP  {
+    display: inline;
+    grid-column-start: 2;
+    grid-row: 2/3;
+  } 
+  #projectP {
+    display: inline;
+    position: relative;
+    right: 100px;
+    grid-column-start: 3;
+    grid-row: 2/3;
+  } 
+
 }
