--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,10 @@ p {font-family:  "Comfortaa", Helvetica, sans-serif;}
 img {vertical-align: middle;}
 a { font-weight: bold;}
 .content {
-    max-width: 1600px;
-    margin: 6px auto;
-    background-color: #f8f8f8;
-    box-sizing: border-box;
+  max-width: 1600px;
+  margin: 6px auto;
+  background-color: #f8f8f8;
+  box-sizing: border-box;
 }
 
 /* slide show genral info*/
@@ -46,6 +46,7 @@ header nav {
   font-family: "M PLUS Rounded 1c";
   background-color:  #fef9f0;
   padding: 11px 0px;
+  border-bottom: 5px solid #808080;
 }
 #Logolink {
   width: 100%;
@@ -53,24 +54,20 @@ header nav {
   grid-row: 1/3;
 }
 #aboutMeP {
-  display: inline;
   grid-column-start: 2;
   grid-row: 1/2;
 } 
 #resumeP  {
-  display: inline;
   position: relative;
   right: 100px;
   grid-column-start: 3;
   grid-row: 1/2;
 } 
 #galoryP  {
-  display: inline;
   grid-column-start: 2;
   grid-row: 2/3;
 } 
 #projectP {
-  display: inline;
   position: relative;
   right: 100px;
   grid-column-start: 3;
