--- a/styles/style.css
+++ b/styles/style.css
@@ -117,52 +117,61 @@ footer {
   font-size: 36px;
 }
 
+/* Resume section */
+/* slide show unique will be dirctly targeted*/
+#ResumeContent {border: 10px #4e5c63 solid;}
+#ResumeContent .prev, .next {
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  padding: 16px;
+  color: #000000;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
 
-@media screen and (max-width: 1300px) {
+/* Position the "next button" to the right */
+#ResumeContent .next {        
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+#ResumeContent .prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+/* Caption text */
+#ResumeContent .text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+/* Number text (1/3 etc) */
+#ResumeContent .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+      
+
+
+
+
+@media screen and (max-width: 1410px) {
   footer {display: grid;}
 
   header nav {
     display: grid;
-    grid-template-columns: 150px 1fr 1fr;
+    grid-template-columns: 400px 1fr 1fr;
     grid-template-rows: 150px 150px;
-    text-align: center;
-    justify-items: end;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    font-size: 30px;
-    font-family: "M PLUS Rounded 1c";
-    background-color:  #fef9f0;
-    padding: 11px 0px;
+    min-width: 1100px;
   }
-  #Logolink {
-    width: 100%;
-    grid-column-start: 1;
-    grid-row: 1/3;
-  }
-  #aboutMeP {
-    display: inline;
-    grid-column-start: 2;
-    grid-row: 1/2;
-  } 
-  #resumeP  {
-    display: inline;
-    position: relative;
-    right: 100px;
-    grid-column-start: 3;
-    grid-row: 1/2;
-  } 
-  #galoryP  {
-    display: inline;
-    grid-column-start: 2;
-    grid-row: 2/3;
-  } 
-  #projectP {
-    display: inline;
-    position: relative;
-    right: 100px;
-    grid-column-start: 3;
-    grid-row: 2/3;
-  } 
 
 }
