--- a/styles/style.css
+++ b/styles/style.css
@@ -146,13 +146,14 @@ footer {
 }     
 /* Caption text */
 #ResumeContent .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: #000000;
+  font-size: 23px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 8px;
+  top: 20px;
   width: 100%;
   text-align: center;
+  font-family: "M PLUS Rounded 1c";
 }
 /* Number text (1/3 etc) */
 #ResumeContent .numbertext {
