--- a/styles/style.css
+++ b/styles/style.css
@@ -116,6 +116,10 @@ footer {
 #HomeContent p {
   font-size: 28px;
 }
+#HomeContent section div p {
+  font-size: 30px;
+  margin: 20px 20px;
+}
 #HomeContent h1 {
   font-size: 36px;
 }
@@ -362,6 +366,170 @@ button {
 }
 .moveDown {
   margin-top: 3em;
+}
+
+/**/
+/**/
+/* This is for my lazy Galory section*/
+
+.slideH1{
+  text-align: center;
+  order: 1  
+}
+#h1GG {
+  margin-top: 50px;
+  background-color: #f2f2f2;
+  padding: 30px;
+}
+#gridGalory {
+  display: grid;
+  padding: 10px;
+  gap: 10px; 
+  margin-top: -25px;
+  max-width: 1600px;
+  /*border: 10px solid #275738;*/
+  background-color: #d9c2a3;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  grid-template-columns: repeat(4, calc(25% - 20px)); /* 350px */
+  grid-template-rows: repeat(4, 300px); 
+  margin-bottom: -100px;
+  
+}
+#gridGalory * {
+  width: 100%;
+  font-size: 32px;
+  padding: 20px 0;
+  
+  text-align: center;
+  box-sizing: border-box;
+  margin: 0 auto;
+ /*border: solid 2px #975D2E; */
+  
+}
+#GGimg {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  border: 5px solid #275738;
+  background-color: #275738;
+  margin-top: 10px;
+} 
+#GGmainP {
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 871px; 
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  margin-top: 10px;
+}
+#GGcomment1 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+#GGcomment2 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+#GGcomment3 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+#GGcomment4 {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+.GGP {
+  max-height: 200px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.GGI {
+  border: 5px solid #275738;
+  background-color: #275738;
+}    
+/* Slideshow container */
+#GaloryContent .slideshow-container {
+  width: calc(100%);
+  position: relative;
+  margin-top: 1px;
+  background-color:#f2f2f2;
+  
+}
+#GaloryContent .slideshow-container p {
+  padding: 20px;
+  text-align: start;
+  font-size: 35px;
+}
+    
+/* Next & previous buttons */
+#GaloryContent .prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: calc(0% + 700px);
+  width: auto;
+  padding: 16px;
+  color:#f2f2f2;
+  font-weight: bold;
+  font-size: 40px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: #4B362A;
+  opacity: .6;
+}
+/* Position the "next button" to the right */
+#GaloryContent .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+    
+/* On hover, add a black background color with a little bit see-through */
+#GaloryContent .prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.9);
+}
+    
+/* Caption text */
+#GaloryContent .text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+    
+/* this is the H1 actualy */
+#GaloryContent .numbertext {
+  color: #f2f2f2;
+  font-size: 20px;
+  padding: 8px 12px;
+  position: center;
+  margin-top: 50px;
+}
+    
+/* Fading animation */
+#GaloryContent .fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+    
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 
