--- a/styles/style.css
+++ b/styles/style.css
@@ -480,7 +480,7 @@ button {
 /* Next & previous buttons */
 #GaloryContent .prev, #GaloryContent .next {
   cursor: pointer;
-  position: fixed;
+  position: absolute;
   top: calc(0% + 1050px);
   padding: 16px;
   color:#f2f2f2;
@@ -494,7 +494,7 @@ button {
 }
 /* Position the "next button" to the right */
 #GaloryContent .next {
-  right: 0%;
+  right: 13.6%;
   border-radius: 3px 0 0 3px;
 }
 #GaloryContent .prev:hover, .next:hover {
